--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "ascii-art": "^1.5.0",
-    "discord.js": "^11.3.2"
-  }
+    "discord.js": "^11.4.2"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BlaGro/AdminB0TEK-master.git"
+  },
+  "bugs": {
+    "url": "https://github.com/BlaGro/AdminB0TEK-master/issues"
+  },
+  "homepage": "https://github.com/BlaGro/AdminB0TEK-master#readme"
 }
