--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "Moj bot ;3",
   "main": "index.js",
+  "engines": {
+    "node": "11.14.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1"  
   },
   "author": "FrOsT",
   "license": "ISC",
